# pre-commit-clippy-fix

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
pre_commit_clippy_fix_wrapper/: __main__.py
